@@ -1,3 +1,12 @@
+2004-04-15  Marian Eichholz <eichholz@computer.org>
+
+	* backend/sm3600.h backend/sm3600-scanmtek.c
+	  backend/sm3600-color.c backend/sm3600-gray.c
+	  backend/sm3600-homerun.c: Many fixes for MacOS-X problems pointed
+	  out by Mattias Ellert, thanks: Waiting longer for DoJog() command
+	  completion, new function for transmitting the line gain correction
+	  data with correct endianess, Chassis-Gray-Level lowered.
+
 2004-04-14  Karl Heinz Kremer <khk@khk.net>
 
 	* backend/epson.conf: Added "usb" entry for libusb
